# lia2.0

./: .env.example  .gitignore  Project-master-doc.md  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  main.py
app/core/: __init__.py  exceptions.py  fsm.py  guardrails.py  schemas.py
app/db/: __init__.py
app/services/interpreter/: matcher.py  parser.py  resolver.py
app/utils/: __init__.py  phone.py  text.py
lia2.0/: Dockerfile
lia2.0/app/: __init__.py
lia2.0/app/core/: fsm.py  guardrails.py
lia2.0/app/db/: __init__.py
lia2.0/app/utils/: __init__.py  phone.py  text.py
lia2.0/migrations/: 001_initial_schema.sql
scripts/: test_order_interpreter.py
